# HGA22

./: LICENCE  README.md
docs/: CMakeLists.txt  README.md  build.bat  build.sh  hga22_8khz_u8bit_agc0.raw  hga22_8khz_u8bit_agc1.raw  hga22_8khz_u8bit_agc2.raw  hga22_8khz_u8bit_agc3.raw  hga22_8khz_u8bit_agc4.raw  main.cpp
firmware/v1.0/: CMakeLists.txt  arm-gcc-toolchain.cmake  build.bat
firmware/v1.0/Drivers/STM32C0xx_HAL_Driver/Inc/: stm32c0xx_hal_uart.h
firmware/v1.0/Drivers/tinyusb/: tusb_config.h
firmware/v1.0/Gcc/: STM32C071RBTX_FLASH.ld
firmware/v1.0/Includes/: adc.h  date.h  main.h  queue.h  ringbuffer.h  shell.h  stm32c0xx_hal_conf.h  tcp_server.h
firmware/v1.0/Sources/: adc.c  date.c  main.c  main_tinyusb.c  queue.c  ringbuffer.c  shell.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c  tcp_server.c  udp_server.c
hardware/v1.0/: HGA22_LM321LV_V2.asc  lm321lv.cir
hardware/v1.0/kicad/: UNO_HGA22_V1.kicad_pcb  UNO_HGA22_V1.kicad_prl  UNO_HGA22_V1.kicad_pro  UNO_HGA22_V1.kicad_sch
